fix(Predict): section shift

--- a/src/presentational/Pages/Predict/predict.module.scss
+++ b/src/presentational/Pages/Predict/predict.module.scss
@@ -74,22 +74,12 @@
   }
 }
 
-.date__sm{
-  width: 16px;
-  margin-top: 5vh;
-  margin-left: 50px;
-  font:{
-    family: Noto Sans; 
-    weight: bold;
-    size: 0.75rem;
-  }
-}
-
 .date_gold{
   color:#CC9423;
 }
 
 .section__brief{
+  margin-left: 10px;
   white-space:nowrap;
 }
 
